# lppl

./: LICENSE  lppl_fitdata.py  pyproject.toml  setup.py
.circleci/: config.yml
lppl/: fit.py  model.py  numerics.py
test/: test_model_consistency.py
