[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "numpy >= 1.18"]

[project]
name = "lppl"
version = "0.0.3a1"
authors = [
    {name = "Kwan Yuet Stephen Ho", email = "stephenhky@yahoo.com.hk"}
]
description = "LPPL Model"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["finance", "bubble", "LPPL"]
requires-python = ">=3.7"
classifiers = [
  "Topic :: Scientific/Engineering :: Mathematics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry"
]

[tool.setuptools]
packages = ["lppl"]
