[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "numpy >= 1.18"]
build-backend = "setuptools.build_meta"

[project]
name = "lppl"
version = "0.0.4"
authors = [
    {name = "Kwan Yuet Stephen Ho", email = "stephenhky@yahoo.com.hk"}
]
description = "LPPL Model"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["finance", "bubble", "LPPL"]
requires-python = ">=3.7"
classifiers = [
  "Topic :: Scientific/Engineering :: Mathematics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry"
]
dependencies = ["numpy", "scipy"]

[project.urls]
Repository = "https://github.com/stephenhky/lppl"
Issues = "https://github.com/stephenhky/lppl/issues"

[tool.setuptools]
packages = ["lppl"]
zip-safe = false

[project.optional-dependencies]
test = ["unittest"]
